[tool.poetry]
name = "uprising-battle-simulator"
version = "0.1.0"
description = ""
authors = ["Kristian Ozol <Kristianozol@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pre-commit = "^3.5.0"
pylint = "^3.0.1"
mypy = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
